--- a/Privacypolicy.html
+++ b/Privacypolicy.html
@@ -1,4 +1,13 @@
-<h1>Privacy Policy</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Privacy Policy</h1>
 <p>Last updated: February 03, 2023</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</a>.</p>
@@ -134,3 +143,6 @@
 <ul>
 <li>By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="0c65626d6d743d3e4c6b616d6560226f6361">[email&#160;protected]</a></li>
 </ul><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+
+</body>
+</html>
